--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles/3-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="icon" type="image/png" href="./images/icon.png">
-    <title>Airbnb</title>
-  </head>
-  <body>
-    <header>
-    </header>
-    <footer>
-      Holberton School
-    </footer>
-  </body>
+<html>
+<head>
+   <title>AirBnB clone</title>
+   <link rel="stylesheet" href="styles/2-common.css">
+   <link rel="stylesheet" href="styles/2-header.css">
+   <link rel="stylesheet" href="styles/2-footer.css">
+   <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+</head>
+<body>
+  <header>
+    <a href="a"></a>
+  </header>
+
+  <footer>
+    Best School
+  </footer>
+</body>
 </html>
